# kvint_test_task

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
deployment/: .env.test  docker-compose.yml
src/: client.py  report_generator.py  service.py  settings.py
src/tests/: test_report_generator.py
