[tool.poetry]
name = "kvint-test-task"
version = "0.1.0"
description = ""
authors = ["artem bogdanov <abogdaov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
python-dotenv = "^1.0.0"
ijson = "^3.2.3"
pytest = "^7.4.3"
aio-pika = "^9.3.0"
aiofiles = "^23.2.1"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
